Adding ability to set track playback to loop. Fixed bug where play button would not change back to play icon when track finished,

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,10 +4,13 @@
     <string name="diary_tab_name">Diary</string>
     <string name="listen_tab_name">Listen</string>
 
-    <string name="restart_button_description">Restart</string>
-    <string name="play_button_description">Play</string>
-    <string name="stop_button_description">Stop</string>
-    
+    <string name="restart_button_description">Restart Track</string>
+    <string name="play_button_description">Play or Pause Track</string>
+    <string name="stop_button_description">Stop Track</string>
+    <string name="loop_button_description">Loop Track</string>
+
+    <string name="looping_toast_text">Track looping</string>
+
     <string name="diary_create_message">What was good about today?</string>
     <string name="diary_entry_save_button">Save</string>
 </resources>
