Created a Service to handle the Media Player to allow it to be used outside the app (supports continued listening whilst doing other activities, or whilst the screen is off. Includes some unit tests.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">Therapy Guide</string>
 
+    <string name="listen_service_description">Service for listening to TherapyGuide audio</string>
+
     <string name="diary_tab_name">Diary</string>
     <string name="listen_tab_name">Listen</string>
 
