Added settings options for a daily diary reminder at a set time, and the setting of an alarm when the relevant setting is on.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,9 +2,25 @@
     <string name="app_name">Therapy Guide</string>
 
     <string name="listen_service_description">Service for listening to TherapyGuide audio</string>
+    <string name="alarm_handler_description">Receiver to handle alarms such as the diary reminder</string>
 
     <string name="diary_tab_name">Diary</string>
     <string name="listen_tab_name">Listen</string>
+
+    <string name="settings">Settings</string>
+
+    <string name="pref_diary_alert_title">Daily diary reminder</string>
+    <string name="pref_diary_alert_summary_on">On</string>
+    <string name="pref_diary_alert_summary_off">Off</string>
+
+    <string name="pref_diary_alert_time_title">Diary reminder time</string>
+    <string name="pref_diary_alert_time_dialog_title">Set the time for your daily diary reminder</string>
+    <string name="pref_diary_alert_time_save_button">Save</string>
+    <string name="pref_diary_alert_time_cancel_button">Cancel</string>
+
+    <string name="diary_reminder_notification_title">Therapy Guide diary reminder</string>
+    <string name="diary_reminder_notification_message">Tap to make a diary entry for today</string>
+    <string name="diary_reminder_notification_ticker_text">Therapy Guide diary reminder</string>
 
     <string name="restart_button_description">Restart Track</string>
     <string name="play_button_description">Play or Pause Track</string>
