--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="listen_tab_name">Listen</string>
 
     <string name="settings">Settings</string>
+    <string name="show_intro">About this app</string>
 
     <string name="pref_diary_alert_title">Daily diary reminder</string>
     <string name="pref_diary_alert_summary_on">On</string>
