--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,8 @@
     <string name="pref_diary_alert_time_save_button">Save</string>
     <string name="pref_diary_alert_time_cancel_button">Cancel</string>
 
+    <string name="diary_reminder_notification_channel_name">Diary Reminder</string>
+    <string name="diary_reminder_notification_channel_description">Reminder to make diary entry</string>
     <string name="diary_reminder_notification_title">Therapy Guide diary reminder</string>
     <string name="diary_reminder_notification_message">Tap to make a diary entry for today</string>
     <string name="diary_reminder_notification_ticker_text">Therapy Guide diary reminder</string>
@@ -31,6 +33,8 @@
 
     <string name="looping_toast_text">Track looping</string>
 
+    <string name="player_notification_channel_name">Player</string>
+    <string name="player_notification_channel_description">Access player controls</string>
     <string name="player_notification_title">Therapy Guide player active</string>
     <string name="player_notification_message">Tap to access player controls</string>
     <string name="player_notification_ticker_text">Therapy Guide player active</string>
