--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,8 +5,9 @@
     <string name="alarm_handler_description">Receiver to handle alarms such as the diary reminder</string>
     <string name="boot_handler_description">Receiver to handle recreation of the diary reminder on device boot</string>
 
+    <string name="listen_tab_name">Sleep</string>
     <string name="diary_tab_name">Diary</string>
-    <string name="listen_tab_name">Listen</string>
+    <string name="kindness_tab_name">Kindness</string>
 
     <string name="settings">Settings</string>
     <string name="show_intro">About this app</string>
@@ -39,17 +40,26 @@
     <string name="player_notification_message">Tap to access player controls</string>
     <string name="player_notification_ticker_text">Therapy Guide player active</string>
 
+    <string name="entry_save_button">Save</string>
+    <string name="entry_cancel_button">Cancel</string>
+    <string name="entry_delete_button">Delete</string>
+
     <string name="diary_create_message">What was good about today?</string>
     <string name="diary_create_message_supplement">What else was good about today?</string>
-    <string name="diary_entry_save_button">Save</string>
-    <string name="diary_entry_cancel_button">Cancel</string>
-    <string name="diary_entry_delete_button">Delete</string>
 
-    <string name="empty_entry_error_toast_text">Diary Entries cannot be empty</string>
-    <string name="missing_entry_error_toast_text">Cannot find Diary Entry</string>
-    <string name="dialog_delete_diary_entry">Are you sure you want to delete this entry?</string>
-    <string name="ok_delete_diary_entry">OK</string>
-    <string name="cancel_delete_diary_entry">Cancel</string>
+    <string name="kindness_create_words_message">Words - say something kind to someone</string>
+    <string name="kindness_create_thoughts_message">Thoughts - think something kind about someone you think about today</string>
+    <string name="kindness_create_actions_message">Actions - do something nice for someone</string>
+    <string name="kindness_create_self_message">Kindness to yourself - say, think or do something kind for yourself today</string>
+
+    <string name="missing_entry_error_toast_text">Cannot find Entry</string>
+    <string name="dialog_delete_entry">Are you sure you want to delete this entry?</string>
+    <string name="ok_delete_entry">OK</string>
+    <string name="cancel_delete_entry">Cancel</string>
+
+    <string name="empty_diary_entry_error_toast_text">You should enter 5 things</string>
+
+    <string name="empty_kindness_error_toast_text">You should select an option for each kindness</string>
 
     <string name="intro_skip_button_text">Skip</string>
     <string name="intro_next_button_text">Next</string>
@@ -61,5 +71,113 @@
     <string name="intro_sleep_image_description">A good night\'s sleep</string>
     <string name="intro_positivity_image_description">Positive Thinking</string>
     <string name="intro_kindness_image_description">Kindness</string>
+
+    <string name="kindness_words_appearance">Compliment someone\'s physical appearance, hair, clothes, etc.</string>
+    <string name="kindness_words_skills">Compliment someone\'s skills (driving, conversation, calmness, writing etc.)</string>
+    <string name="kindness_words_abilities">Compliment someone on how well they coped with something or achieved something</string>
+    <string name="kindness_words_love">Tell someone you love something you love about them</string>
+    <string name="kindness_words_thanks">Say thank you to someone who\'s helped you</string>
+    <string name="kindness_words_call">Call someone in your family or a distant friend</string>
+    <string name="kindness_words_other">Other</string>
+
+    <string name="kindness_thoughts_wishes">To everyone you meet (EVERYONE!), wish them well when you see them</string>
+    <string name="kindness_thoughts_doubt">Give someone the benefit of the doubt</string>
+    <string name="kindness_thoughts_forgive">Forgive someone for behaving poorly in the past</string>
+    <string name="kindness_thoughts_success">Think about how well someone is doing something</string>
+    <string name="kindness_thoughts_listen">Listen, I mean really listen, to what someone is telling you</string>
+    <string name="kindness_thoughts_gossip">Be mindful in not joining in with gossip about someone</string>
+    <string name="kindness_thoughts_other">Other</string>
+
+    <string name="kindness_actions_door">Open a door for someone</string>
+    <string name="kindness_actions_assist">Help someone who looks like they are struggling</string>
+    <string name="kindness_actions_traffic">Let someone in the traffic ahead of you</string>
+    <string name="kindness_actions_walk">Walk your elderly neighbour\'s dog</string>
+    <string name="kindness_actions_litter">Pick a piece of discarded rubbish out of someone\'s garden</string>
+    <string name="kindness_actions_cake">Take cakes to work</string>
+    <string name="kindness_actions_help">Ask your partner if you can help with anything</string>
+    <string name="kindness_actions_thanks">Send someone a thank you card</string>
+    <string name="kindness_actions_buy">Buy a parking ticket for the next person</string>
+    <string name="kindness_actions_other">Other</string>
+
+    <string name="kindness_self_compliment">Hear yourself say something nice about yourself today</string>
+    <string name="kindness_self_compassion">Be compassionate to yourself today</string>
+    <string name="kindness_self_friend">Spend time with a good friend</string>
+    <string name="kindness_self_day">Be positive about your day when anyone asks you how you are</string>
+    <string name="kindness_self_call">Phone a distant friend or family member</string>
+    <string name="kindness_self_generous">Notice the kind things you do for other people</string>
+    <string name="kindness_self_forgive">Allow yourself to forgive yourself for something you think you should have done better</string>
+    <string name="kindness_self_kind">Notice when you are unkind to yourself, and change the thought to a more helpful one</string>
+    <string name="kindness_self_accept">Allow someone to help you (take up that offer of help they gave last week!)</string>
+    <string name="kindness_self_class">Join a class</string>
+    <string name="kindness_self_volunteer">Find somewhere to volunteer a couple of hours a week</string>
+    <string name="kindness_self_movie">If you never stop - watch a movie</string>
+    <string name="kindness_self_active">If you aren\'t active - do 20 minutes of activity today</string>
+    <string name="kindness_self_hobby">Allow yourself time for your hobby or take up a new one</string>
+    <string name="kindness_self_walk">Go for a walk</string>
+    <string name="kindness_self_cook">Cook a good meal</string>
+    <string name="kindness_self_date">Start to organise going out with a friend</string>
+    <string name="kindness_self_nature">Lay in the grass or on a beach looking at nature</string>
+    <string name="kindness_self_read">Read a book</string>
+    <string name="kindness_self_laugh">Make someone else laugh</string>
+    <string name="kindness_self_draw">Draw</string>
+    <string name="kindness_self_other">Other</string>
+
+    <string-array name="kindness_words_array">
+        <item >@string/kindness_words_appearance</item>
+        <item >@string/kindness_words_skills</item>
+        <item >@string/kindness_words_abilities</item>
+        <item >@string/kindness_words_love</item>
+        <item >@string/kindness_words_thanks</item>
+        <item >@string/kindness_words_call</item>
+        <item >@string/kindness_words_other</item>
+    </string-array>
+
+    <string-array name="kindness_thoughts_array">
+        <item >@string/kindness_thoughts_wishes</item>
+        <item >@string/kindness_thoughts_doubt</item>
+        <item >@string/kindness_thoughts_forgive</item>
+        <item >@string/kindness_thoughts_success</item>
+        <item >@string/kindness_thoughts_listen</item>
+        <item >@string/kindness_thoughts_gossip</item>
+        <item >@string/kindness_thoughts_other</item>
+    </string-array>
+
+    <string-array name="kindness_actions_array">
+        <item >@string/kindness_actions_door</item>
+        <item >@string/kindness_actions_assist</item>
+        <item >@string/kindness_actions_traffic</item>
+        <item >@string/kindness_actions_walk</item>
+        <item >@string/kindness_actions_litter</item>
+        <item >@string/kindness_actions_cake</item>
+        <item >@string/kindness_actions_help</item>
+        <item >@string/kindness_actions_thanks</item>
+        <item >@string/kindness_actions_buy</item>
+        <item >@string/kindness_actions_other</item>
+    </string-array>
+
+    <string-array name="kindness_self_array">
+        <item >@string/kindness_self_compliment</item>
+        <item >@string/kindness_self_compassion</item>
+        <item >@string/kindness_self_friend</item>
+        <item >@string/kindness_self_day</item>
+        <item >@string/kindness_self_call</item>
+        <item >@string/kindness_self_generous</item>
+        <item >@string/kindness_self_forgive</item>
+        <item >@string/kindness_self_kind</item>
+        <item >@string/kindness_self_accept</item>
+        <item >@string/kindness_self_class</item>
+        <item >@string/kindness_self_volunteer</item>
+        <item >@string/kindness_self_movie</item>
+        <item >@string/kindness_self_active</item>
+        <item >@string/kindness_self_hobby</item>
+        <item >@string/kindness_self_walk</item>
+        <item >@string/kindness_self_cook</item>
+        <item >@string/kindness_self_date</item>
+        <item >@string/kindness_self_nature</item>
+        <item >@string/kindness_self_read</item>
+        <item >@string/kindness_self_laugh</item>
+        <item >@string/kindness_self_draw</item>
+        <item >@string/kindness_self_other</item>
+    </string-array>
 
 </resources>
