--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
 
     <string name="settings">Settings</string>
     <string name="show_intro">About this app</string>
+    <string name="show_about">About Tiffany Armitage</string>
 
     <string name="pref_diary_alert_title">Daily diary reminder</string>
     <string name="pref_diary_alert_summary_on">On</string>
