--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,18 +51,20 @@
     <string name="diary_create_message">What was good about today?</string>
     <string name="diary_create_message_supplement">What else was good about today?</string>
 
-    <string name="kindness_create_words_message">Words - choose a way to say something kind to someone today</string>
-    <string name="kindness_create_thoughts_message">Thoughts - choose a way to think something kind about someone today</string>
-    <string name="kindness_create_actions_message">Actions - choose a way to do something nice for someone today</string>
-    <string name="kindness_create_self_message">Kindness to yourself - choose a way to be kind to yourself today</string>
+    <string name="kindness_create_categories_message">Choose a type of kindness for today. Try and pick each type at least once per week!</string>
+    <string name="kindness_create_categories_please_message">You must go back and select a type of kindness for today.</string>
+    <string name="kindness_create_words_message">Choose a way to say something kind to someone today</string>
+    <string name="kindness_create_thoughts_message">Choose a way to think something kind about someone today</string>
+    <string name="kindness_create_actions_message">Choose a way to do something nice for someone today</string>
+    <string name="kindness_create_self_message">Choose a way to be kind to yourself today</string>
 
     <string name="missing_entry_error_toast_text">Cannot find Entry</string>
     <string name="dialog_delete_entry">Are you sure you want to delete this entry?</string>
     <string name="ok_delete_entry">OK</string>
     <string name="cancel_delete_entry">Cancel</string>
 
-    <string name="dialog_kindness_reminder">Would you like to pick some ways to be kind today?</string>
-    <string name="ok_kindness_reminder">Yes. Be kind</string>
+    <string name="dialog_kindness_reminder">Would you like to pick a way to be kind today?</string>
+    <string name="ok_kindness_reminder">Yes, be kind</string>
     <string name="cancel_kindness_reminder">Maybe Later</string>
 
     <string name="empty_diary_entry_error_toast_text">You should enter 5 things</string>
@@ -74,6 +76,12 @@
     <string name="kindness_cancel_button_text">Cancel</string>
     <string name="kindness_done_button_text">I\'m done</string>
 
+    <string name="kindness_card_image_description">Depiction of kindness type (say, think, do or self)</string>
+    <string name="kindness_card_image_description_words">Saying something kind</string>
+    <string name="kindness_card_image_description_thoughts">Thinking something kind</string>
+    <string name="kindness_card_image_description_actions">Doing something kind</string>
+    <string name="kindness_card_image_description_self">Being kind to yourself</string>
+
     <string name="intro_skip_button_text">Skip</string>
     <string name="intro_next_button_text">Next</string>
     <string name="intro_done_button_text">Got it</string>
@@ -84,6 +92,11 @@
     <string name="intro_sleep_image_description">A good night\'s sleep</string>
     <string name="intro_positivity_image_description">Positive Thinking</string>
     <string name="intro_kindness_image_description">Kindness</string>
+
+    <string name="kindness_categories_words">Say something kind to someone today</string>
+    <string name="kindness_categories_thoughts">Think something kind about someone today</string>
+    <string name="kindness_categories_actions">Do something nice for someone today</string>
+    <string name="kindness_categories_self">Be kind to yourself today</string>
 
     <string name="kindness_words_appearance">Compliment someone\'s physical appearance, hair, clothes, etc.</string>
     <string name="kindness_words_skills">Compliment someone\'s skills (driving, conversation, calmness, writing etc.)</string>
@@ -134,6 +147,13 @@
     <string name="kindness_self_laugh">Make someone else laugh</string>
     <string name="kindness_self_draw">Draw</string>
     <string name="kindness_self_other">Other</string>
+
+    <string-array name="kindness_categories_array">
+        <item >@string/kindness_categories_words</item>
+        <item >@string/kindness_categories_thoughts</item>
+        <item >@string/kindness_categories_actions</item>
+        <item >@string/kindness_categories_self</item>
+    </string-array>
 
     <string-array name="kindness_words_array">
         <item >@string/kindness_words_appearance</item>
