--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="kindness_tab_name">Kindness</string>
 
     <string name="settings">Settings</string>
-    <string name="show_intro">About this app</string>
+    <string name="show_intro">How to use this app</string>
     <string name="show_about">About Tiffany Armitage</string>
 
     <string name="pref_diary_alert_title">Daily diary reminder</string>
